<resources>
    <string name="app_name">ParkingMap</string>
    <string name="title_activity_maps">RazorParking</string>
    <string name="go">Go!</string>
    <string name="thierry">thierry</string>
    <string name="ange1">ange1</string>
    <string name="ishimwe">ishimwe</string>
    <string name="lionel">lionel</string>
    <string name="imena">imena</string>
    <string name="kirenga">kirenga</string>
    <string name="clicked_thierry">clicked_thierry</string>
    <string name="clicked_lionel">clicked_lionel</string>
    <string name="reserved">Reserved</string>
    <string name="resident">Resident</string>
    <string name="faculty">Faculty</string>
    <string name="student">Student</string>
    <string name="_7_00am_4_49_pm">7:00am - 4:49 pm</string>
    <string name="_5_00pm_7_59pm">5:00pm - 7:59Pm</string>
    <string name="_8_00pm_6_59am">8:00pm - 6:59am</string>
    <string name="current_time">Current Time</string>
    <string name="time">Time</string>
    <string name="park">park</string>
    <string name="what_permit_do_you_have">What permit do you have</string>
    <string name="_7am_5pm">7am - 5pm</string>
    <string name="_5pm_8pm">5pm - 8pm</string>
    <string name="what_time_do_you_want_to_park">What time do you want to park</string>
    <string name="date_and_time">Date and Time</string>
    <string name="_8pm_3am">8pm - 3am</string>
    <string name="_3am_7am">3am - 7am</string>
    <string name="load_parking_spots">Load Parking Spots</string>
    <string name="no_permit">No permit</string>

</resources>
