<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Configuration">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/park"
        android:textSize="35sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="86dp"
        android:text="@string/what_permit_do_you_have"
        android:textSize="20sp"
        android:layout_alignParentLeft="true" />

    <RadioGroup
        android:id="@+id/Permit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="129dp"
        android:layout_alignParentLeft="true">

        <RadioButton
            android:id="@+id/reserved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reserved" />

        <RadioButton
            android:id="@+id/resident"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resident" />

        <RadioButton
            android:id="@+id/faculty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faculty" />

        <RadioButton
            android:id="@+id/student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="253dp"
        android:text="What time do you want to park"
        android:textSize="20sp"
        android:layout_alignParentLeft="true" />

    <RadioGroup
        android:id="@+id/Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="101dp"
        android:layout_alignParentLeft="true">

        <RadioButton
            android:id="@+id/SeventoFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7_00am_4_49_pm" />

        <RadioButton
            android:id="@+id/FivetoEight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5_00pm_7_59pm" />

        <RadioButton
            android:id="@+id/EighttoSeven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8_00pm_6_59am" />

        <RadioButton
            android:id="@+id/currentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_time" />
    </RadioGroup>

    <Button
        android:id="@+id/LoadParkingSpots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Time"
        android:layout_alignParentEnd="true"
        android:text="Load Parking Spots"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/seeTime"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="55dp"
        android:layout_marginTop="140dp"
        android:hint="Date and Time"
        android:layout_alignParentRight="true"
        android:layout_marginRight="55dp" />

    <Button
        android:id="@+id/clickTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/seeTime"
        android:layout_marginEnd="56dp"
        android:text="@string/time"
        android:layout_alignParentRight="true"
        android:layout_marginRight="56dp"
        android:onClick="seeTime"/>


</RelativeLayout>